@@ -20,39 +20,43 @@ else
 fi
 echo "JAVA_HOME=${JAVA_HOME}"
 
-if [ -d "/tmp/$USER/plume-scripts" ] ; then
-  (cd "/tmp/$USER/plume-scripts" && git pull -q)
+# Using `(cd "$CHECKERFRAMEWORK" && ./gradlew getPlumeScripts -q)` leads to infinite regress.
+PLUME_SCRIPTS="$CHECKERFRAMEWORK/checker/bin-devel/.plume-scripts"
+if [ -d "$PLUME_SCRIPTS" ] ; then
+  (cd "$PLUME_SCRIPTS" && git pull -q)
 else
-  mkdir -p "/tmp/$USER" && (cd "/tmp/$USER" && (git clone --depth 1 -q https://github.com/plume-lib/plume-scripts.git || git clone --depth 1 -q https://github.com/plume-lib/plume-scripts.git))
+  (cd "$CHECKERFRAMEWORK/checker/bin-devel" && \
+      (git clone --depth 1 -q https://github.com/plume-lib/plume-scripts.git .plume-scripts || \
+       git clone --depth 1 -q https://github.com/plume-lib/plume-scripts.git .plume-scripts))
 fi
 
 # Clone the annotated JDK into ../jdk .
-"/tmp/$USER/plume-scripts/git-clone-related" typetools jdk
+"$PLUME_SCRIPTS/git-clone-related" typetools jdk
 
 AFU="${AFU:-../annotation-tools/annotation-file-utilities}"
 # Don't use `AT=${AFU}/..` which causes a git failure.
 AT=$(dirname "${AFU}")
 
 ## Build annotation-tools (Annotation File Utilities)
-"/tmp/$USER/plume-scripts/git-clone-related" typetools annotation-tools "${AT}"
+"$PLUME_SCRIPTS/git-clone-related" typetools annotation-tools "${AT}"
 if [ ! -d ../annotation-tools ] ; then
   ln -s "${AT}" ../annotation-tools
 fi
 
-echo "Running:  (cd ${AT} && ./.travis-build-without-test.sh)"
-(cd "${AT}" && ./.travis-build-without-test.sh)
-echo "... done: (cd ${AT} && ./.travis-build-without-test.sh)"
+echo "Running:  (cd ${AT} && ./.build-without-test.sh)"
+(cd "${AT}" && ./.build-without-test.sh)
+echo "... done: (cd ${AT} && ./.build-without-test.sh)"
 
 
 ## Build stubparser
-"/tmp/$USER/plume-scripts/git-clone-related" typetools stubparser
-echo "Running:  (cd ../stubparser/ && ./.travis-build-without-test.sh)"
-(cd ../stubparser/ && ./.travis-build-without-test.sh)
-echo "... done: (cd ../stubparser/ && ./.travis-build-without-test.sh)"
+"$PLUME_SCRIPTS/git-clone-related" typetools stubparser
+echo "Running:  (cd ../stubparser/ && ./.build-without-test.sh)"
+(cd ../stubparser/ && ./.build-without-test.sh)
+echo "... done: (cd ../stubparser/ && ./.build-without-test.sh)"
 
 
 ## Build JSpecify, only for the purpose of using its tests.
-"/tmp/$USER/plume-scripts/git-clone-related" jspecify jspecify
+"$PLUME_SCRIPTS/git-clone-related" jspecify jspecify
 if type -p java; then
   _java=java
 elif [[ -n "$JAVA_HOME" ]] && [[ -x "$JAVA_HOME/bin/java" ]];  then
@@ -64,7 +68,8 @@ fi
 version=$("$_java" -version 2>&1 | head -1 | cut -d'"' -f2 | sed '/^1\./s///' | cut -d'.' -f1)
 if [[ "$version" -ge 9 ]]; then
   echo "Running:  (cd ../jspecify/ && ./gradlew build)"
-  (cd ../jspecify/ && ./gradlew build)
+  # If failure, retry in case the failure was due to network lossage.
+  (cd ../jspecify/ && export JDK_JAVA_OPTIONS='--add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED' && (./gradlew build || (sleep 60 && ./gradlew build)))
   echo "... done: (cd ../jspecify/ && ./gradlew build)"
 fi
 
